try to publish github package

--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "pdfcreator",
+  "name": "axis-pdf-creator",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/QidaDev/pdfcreatorv2.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
