--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "pdfcreator",
+  "name": "@qidadev/axis-pdf-creator",
   "private": false,
   "version": "0.0.1",
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/QidaDev/pdfcreatorv2.git"
+    "url": "git+https://github.com/QidaDev/pdfcreatorv2.git"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -41,5 +41,13 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
-  }
+  },
+  "description": "",
+  "main": "eslint.config.js",
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/QidaDev/pdfcreatorv2/issues"
+  },
+  "homepage": "https://github.com/QidaDev/pdfcreatorv2#readme"
 }
