--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@qidadev/axis-pdf-creator",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.1008",
   "type": "module",
   "repository": {
     "type": "git",
@@ -12,19 +12,20 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsup src/index.ts --format esm,cjs --dts",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/vite": "^4.1.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-i18next": "^15.5.1",
     "react-pdf-tailwind": "^2.3.0",
     "react-router-dom": "^7.6.0",
-    "tailwindcss": "^4.1.6"
+    "tailwindcss": "^4.1.6",
+    "tsup": "^8.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -42,8 +43,15 @@
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
   },
+  "overrides": {
+    "@react-pdf/renderer": {
+      "react": "^18.0.0"
+    }
+  },
   "description": "",
-  "main": "eslint.config.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "author": "",
   "license": "ISC",
   "bugs": {
