--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
   },
-  "include": ["src"],
+  "include": ["src", "src/types"],
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
