--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@qidadev/axis-pdf-creator",
   "private": false,
-  "version": "0.0.1008",
+  "version": "0.0.51",
   "type": "module",
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "dependencies": {
     "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/vite": "^4.1.6",
+    "buffer": "^6.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.5.1",
@@ -41,6 +42,7 @@
     "node-fetch": "^3.3.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
+    "url-loader": "^4.1.1",
     "vite": "^6.3.5"
   },
   "overrides": {
